<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="Name">Name</string>
    <string name="topping">Toppings</string>
    <string name="Cream">Whipped Cream</string>
    <string name="Chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="Order">Order</string>
    <string name="thank_you">Thank You!</string>
    <string name="order_name">Name: <xliff:g id="name" example="Anubhav">%s</xliff:g></string>
    <string name="whipped">Add Whipped Cream: <xliff:g id="value" example="True">%b</xliff:g></string>
    <string name="choco">Add Chocolate: <xliff:g id="value1" example="True">%b</xliff:g></string>
    <string name="qty">Quantity: <xliff:g id="quantity" example="1">%d</xliff:g></string>
    <string name="tot">Total: <xliff:g id="price" example="1">%d</xliff:g></string>
</resources>
