<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity"
    >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <EditText
           android:id="@+id/Name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/Name"
           android:inputType="textCapWords"
           />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping"
        style="@style/udacity"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/black"
        />


    <CheckBox
        android:id="@+id/whipped_checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/Cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:onClick="WboxChecked"/>
       <CheckBox
           android:id="@+id/chocolate_checked"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"
           android:text="@string/Chocolate"
           android:textSize="16sp"
           android:paddingLeft="24dp"
           android:onClick="CboxChecked"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textAllCaps="true"
        style="@style/udacity"
        android:textColor="@android:color/black"
     />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="decrement"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="16sp"/>


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="increment"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        style="@style/udacity"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:textSize="16sp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Order"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"/>


</LinearLayout>
</ScrollView>